src/_bootstrap/_kalos_string_format.c
/* Generated by re2c 2.1.1 on Sun Jun 20 17:24:19 2021 */
#include <ctype.h>
#include "_kalos_defines.h"
#include "_kalos_string_format.h"

// Comparison equivalent to 'unsigned == 0'
#pragma warning 136 9

bool kalos_parse_string_format(const char* s, kalos_string_format* string_format) {
    const char* YYMARKER;
    const char *fill, *align, *sign, *alt_fmt, *zero_pad, *min_width, *precision, *type;

    const char *yyt1; const char *yyt2; const char *yyt3; const char *yyt4; const char *yyt5; const char *yyt6; const char *yyt7; const char *yyt8; 

    
{
	char yych;
	yych = *s;
	switch (yych) {
	case 0x00:
		yyt1 = yyt2 = yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case ' ':
	case '+':
	case '-':
		yyt1 = yyt2 = NULL;
		yyt3 = yyt8 = s;
		goto yy6;
	case '#':
		yyt1 = yyt2 = yyt3 = NULL;
		yyt4 = yyt8 = s;
		goto yy7;
	case '.':
		yyt1 = yyt2 = yyt3 = yyt4 = yyt5 = yyt6 = NULL;
		yyt8 = s;
		goto yy8;
	case '0':
		yyt1 = yyt2 = yyt3 = yyt4 = NULL;
		yyt5 = yyt8 = s;
		goto yy9;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = yyt2 = yyt3 = yyt4 = yyt5 = NULL;
		yyt6 = yyt8 = s;
		goto yy10;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt1 = NULL;
		yyt2 = yyt8 = s;
		goto yy11;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt1 = yyt2 = yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy12;
	default:
		yyt8 = s;
		goto yy4;
	}
yy2:
	++s;
	fill = yyt1;
	align = yyt2;
	sign = yyt3;
	alt_fmt = yyt4;
	zero_pad = yyt5;
	min_width = yyt6;
	precision = yyt7;
	type = yyt8;
	{
            memset(string_format, 0, sizeof(*string_format));
            if (zero_pad) {
                string_format->fill = '0';
                string_format->align = '>';
            }
            if (fill) {
                string_format->fill = *fill;
            }
            if (align) {
                string_format->align = *align;
            }
            if (sign) {
                string_format->sign = *sign;
            }
            if (alt_fmt) {
                string_format->alt_fmt = *alt_fmt;
            }
            if (min_width) {
				string_format->min_width = 0;
                while (isdigit(*min_width)) {
                    string_format->min_width *= 10;
                    string_format->min_width += (*min_width) - '0';
                    min_width++;
                }
            }
            if (precision) {
				string_format->precision = 0;
                while (isdigit(*precision)) {
                    string_format->precision *= 10;
                    string_format->precision += (*precision) - '0';
                    precision++;
                }
            }
            if (type) {
                string_format->type = *type;
            }
            return true;
        }
yy4:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	default:	goto yy5;
	}
yy5:
	{ return false; }
yy6:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:
		yyt4 = yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '#':
		yyt4 = s;
		goto yy15;
	case '.':
		yyt4 = yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt4 = NULL;
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt4 = yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt4 = yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy5;
	}
yy7:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:
		yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':
		yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy5;
	}
yy8:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '0':
		yyt7 = s;
		goto yy21;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt7 = s;
		goto yy22;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	default:	goto yy5;
	}
yy9:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:
		yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':
		yyt6 = NULL;
		goto yy16;
	case '0':
		yyt6 = s;
		goto yy24;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt6 = s;
		goto yy18;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy5;
	}
yy10:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:
		yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':	goto yy16;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy5;
	}
yy11:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:
		yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case ' ':
	case '+':
	case '-':
		yyt3 = s;
		goto yy25;
	case '#':
		yyt3 = NULL;
		yyt4 = s;
		goto yy15;
	case '.':
		yyt3 = yyt4 = yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt3 = yyt4 = NULL;
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt3 = yyt4 = yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy5;
	}
yy12:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 0x00:	goto yy2;
	case '<':
	case '=':
	case '>':
	case '^':
		yyt2 = s;
		goto yy13;
	default:	goto yy5;
	}
yy13:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt1 = yyt8;
		yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case ' ':
	case '+':
	case '-':
		yyt1 = yyt8;
		yyt3 = s;
		goto yy25;
	case '#':
		yyt1 = yyt8;
		yyt3 = NULL;
		yyt4 = s;
		goto yy15;
	case '.':
		yyt1 = yyt8;
		yyt3 = yyt4 = yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt1 = yyt8;
		yyt3 = yyt4 = NULL;
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = yyt8;
		yyt3 = yyt4 = yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt1 = yyt8;
		yyt3 = yyt4 = yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy14:
	s = YYMARKER;
	goto yy5;
yy15:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':
		yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy16:
	yych = *++s;
	switch (yych) {
	case '0':
		yyt7 = s;
		goto yy21;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt7 = s;
		goto yy22;
	default:	goto yy14;
	}
yy17:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':
		yyt6 = NULL;
		goto yy16;
	case '0':
		yyt6 = s;
		goto yy24;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt6 = s;
		goto yy18;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy18:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':	goto yy16;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy20:
	yych = *++s;
	if (yych <= 0x00) goto yy2;
	goto yy14;
yy21:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt8 = NULL;
		goto yy2;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy22:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt8 = NULL;
		goto yy2;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy24:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt7 = yyt8 = NULL;
		goto yy2;
	case '.':	goto yy16;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
yy25:
	yych = *++s;
	switch (yych) {
	case 0x00:
		yyt4 = yyt5 = yyt6 = yyt7 = yyt8 = NULL;
		goto yy2;
	case '#':
		yyt4 = s;
		goto yy15;
	case '.':
		yyt4 = yyt5 = yyt6 = NULL;
		goto yy16;
	case '0':
		yyt4 = NULL;
		yyt5 = s;
		goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt4 = yyt5 = NULL;
		yyt6 = s;
		goto yy18;
	case 'X':
	case 'c':
	case 'd':
	case 'o':
	case 'x':
		yyt4 = yyt5 = yyt6 = yyt7 = NULL;
		yyt8 = s;
		goto yy20;
	default:	goto yy14;
	}
}

}
